html sections layout

--- a/index.html
+++ b/index.html
@@ -4,14 +4,84 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
   <title>The Booleaner</title>
 </head>
 <body>
   <header>
-
+    <img src="img/logo.svg" alt="Bololeaner logo">
   </header>
   <main>
-    
+
+    <!-- Titolo -->
+    <section class="title">
+      <h1>Internet deve essere al servizio del "bene publico": il manifesto di Tim Berners-Lee</h1>
+      <h5>Scritto da <a class="link-main-page" href="">The Booleaner</a></h5>
+      <p>il 10/10/2020</p>
+      <img src="img/tim-1.jpg" alt="">
+      <img src="img/tim-2.jpg" alt="">
+      <p> 1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
+      2nd Photo: Wikimedia, by Paul Clarke</p>
+    </section>
+    <!-- /Titolo -->
+
+    <!-- Contenuto Articolo -->
+    <section>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem earum, quibusdam blanditiis facere atque optio distinctio aperiam tempore ex laboriosam, <span class="hilighted-text">voluptates eos ullam dolores</span> laudantium tenetur? Porro sed vitae a?</p>
+
+    <!-- Bullet Points -->
+    <section>
+      <ul>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem earum, quibusdam blanditiis facere atque optio distinctio aperiam tempore ex laboriosam, voluptates eos ullam dolores laudantium tenetur? Porro sed vitae a?</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem earum, quibusdam blanditiis facere atque optio distinctio aperiam tempore ex laboriosam, voluptates eos ullam dolores laudantium tenetur? Porro sed vitae a?</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem earum, quibusdam blanditiis facere atque optio distinctio aperiam tempore ex laboriosam, voluptates eos ullam dolores laudantium tenetur? Porro sed vitae a?</li>
+      </ul>
+    </section>
+    <!-- /Bullet Points -->
+
+    <!-- Tabella -->
+    <section>
+      <table>
+        <thead>
+          <tr>
+            <th>Lorem ipsum dolor</th>
+            <th>Lorem ipsum dolor</th>
+            <th>Lorem ipsum dolor</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Lorem ipsum dolor</td>
+            <td>Lorem ipsum dolor</td>
+            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam vero laborum fugiat accusantium eum non provident aliquam officiis quas dolores veniam, eligendi ut libero qui ipsam dicta quae, similique dignissimos vel nesciunt saepe. Totam perspiciatis magnam eos nulla minus aut. Doloremque assumenda eveniet dicta natus ipsam, quod eligendi iste praesentium officia corrupti, aperiam obcaecati possimus. Nemo corporis consectetur, provident quis et quidem similique placeat eius delectus, accusamus cupiditate est voluptatum dolorem dolorum fugit architecto labore? Quis perferendis id aut repellendus ipsam voluptatibus et, fugit eum quam commodi at doloribus neque tempora atque. Neque repudiandae exercitationem atque quaerat perferendis nobis sed!</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum dolor</td>
+            <td>Lorem ipsum dolor</td>
+            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam vero laborum fugiat accusantium eum non provident aliquam officiis quas dolores veniam, eligendi ut libero qui ipsam dicta quae, similique dignissimos vel nesciunt saepe. Totam perspiciatis magnam eos nulla minus aut. Doloremque assumenda eveniet dicta natus ipsam, quod eligendi iste praesentium officia corrupti, aperiam obcaecati possimus. Nemo corporis consectetur, provident quis et quidem similique placeat eius delectus, accusamus cupiditate est voluptatum dolorem dolorum fugit architecto labore? Quis perferendis id aut repellendus ipsam voluptatibus et, fugit eum quam commodi at doloribus neque tempora atque. Neque repudiandae exercitationem atque quaerat perferendis nobis sed!</td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum dolor</td>
+            <td>Lorem ipsum dolor</td>
+            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam vero laborum fugiat accusantium eum non provident aliquam officiis quas dolores veniam, eligendi ut libero qui ipsam dicta quae, similique dignissimos vel nesciunt saepe. Totam perspiciatis magnam eos nulla minus aut. Doloremque assumenda eveniet dicta natus ipsam, quod eligendi iste praesentium officia corrupti, aperiam obcaecati possimus. Nemo corporis consectetur, provident quis et quidem similique placeat eius delectus, accusamus cupiditate est voluptatum dolorem dolorum fugit architecto labore? Quis perferendis id aut repellendus ipsam voluptatibus et, fugit eum quam commodi at doloribus neque tempora atque. Neque repudiandae exercitationem atque quaerat perferendis nobis sed!</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+    <!-- /Tabella -->
+
+  </section>
+  <!-- /Contenuto Articolo -->
+
+  <!-- Pagine correlate -->
+  <section>
+    <h5>Potrebbero interessarti</h5>
+    <img src="img/monitor.jpg" alt="monitor computer">
+    <img src="img/graph.jpg" alt="schermo grafico">
+  </section>
+  <!-- /Pagine correlate -->
+
+
   </main>
 </body>
 </html>
