--- a/index.html
+++ b/index.html
@@ -8,20 +8,26 @@
   <title>The Booleaner</title>
 </head>
 <body>
+
   <header>
     <img src="img/logo.svg" alt="Bololeaner logo">
   </header>
-  <main>
 
+  <main>
     <!-- Titolo -->
-    <section class="title">
+    <section class="title-article">
       <h1>Internet deve essere al servizio del "bene publico": il manifesto di Tim Berners-Lee</h1>
-      <h5>Scritto da <a class="link-main-page" href="">The Booleaner</a></h5>
-      <p>il 10/10/2020</p>
-      <img src="img/tim-1.jpg" alt="">
-      <img src="img/tim-2.jpg" alt="">
-      <p> 1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
-      2nd Photo: Wikimedia, by Paul Clarke</p>
+      <div class="subhead">
+        <h5>Scritto da <a class="link-main-page" href="">The Booleaner</a></h5>
+        <p>il 10/10/2020</p>
+      </div>
+
+      <div class="photo-tim"> 
+        <img src="img/tim-1.jpg" alt="">
+        <img src="img/tim-2.jpg" alt="">
+        <p> 1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
+        2nd Photo: Wikimedia, by Paul Clarke</p>
+        </div>
     </section>
     <!-- /Titolo -->
 
@@ -50,26 +56,26 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <tr class="odd-row-color">
             <td>Lorem ipsum dolor</td>
             <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam vero laborum fugiat accusantium eum non provident aliquam officiis quas dolores veniam, eligendi ut libero qui ipsam dicta quae, similique dignissimos vel nesciunt saepe. Totam perspiciatis magnam eos nulla minus aut. Doloremque assumenda eveniet dicta natus ipsam, quod eligendi iste praesentium officia corrupti, aperiam obcaecati possimus. Nemo corporis consectetur, provident quis et quidem similique placeat eius delectus, accusamus cupiditate est voluptatum dolorem dolorum fugit architecto labore? Quis perferendis id aut repellendus ipsam voluptatibus et, fugit eum quam commodi at doloribus neque tempora atque. Neque repudiandae exercitationem atque quaerat perferendis nobis sed!</td>
+            <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, nobis quod vitae minima aliquid blanditiis in tempore labore temporibus impedit hic tenetur id rem dolorum animi sunt corporis perspiciatis delectus dolor explicabo omnis earum soluta. Similique voluptas eos, consequuntur ipsa facere nostrum voluptate laudantium veniam, quia quisquam obcaecati quod. In!</td>
           </tr>
           <tr>
             <td>Lorem ipsum dolor</td>
             <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam vero laborum fugiat accusantium eum non provident aliquam officiis quas dolores veniam, eligendi ut libero qui ipsam dicta quae, similique dignissimos vel nesciunt saepe. Totam perspiciatis magnam eos nulla minus aut. Doloremque assumenda eveniet dicta natus ipsam, quod eligendi iste praesentium officia corrupti, aperiam obcaecati possimus. Nemo corporis consectetur, provident quis et quidem similique placeat eius delectus, accusamus cupiditate est voluptatum dolorem dolorum fugit architecto labore? Quis perferendis id aut repellendus ipsam voluptatibus et, fugit eum quam commodi at doloribus neque tempora atque. Neque repudiandae exercitationem atque quaerat perferendis nobis sed!</td>
+            <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, nobis quod vitae minima aliquid blanditiis in tempore labore temporibus impedit hic tenetur id rem dolorum animi sunt corporis perspiciatis delectus dolor explicabo omnis earum soluta. Similique voluptas eos, consequuntur ipsa facere nostrum voluptate laudantium veniam, quia quisquam obcaecati quod. In!</td>
           </tr>
-          <tr>
+          <tr class="odd-row-color">
             <td>Lorem ipsum dolor</td>
             <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam vero laborum fugiat accusantium eum non provident aliquam officiis quas dolores veniam, eligendi ut libero qui ipsam dicta quae, similique dignissimos vel nesciunt saepe. Totam perspiciatis magnam eos nulla minus aut. Doloremque assumenda eveniet dicta natus ipsam, quod eligendi iste praesentium officia corrupti, aperiam obcaecati possimus. Nemo corporis consectetur, provident quis et quidem similique placeat eius delectus, accusamus cupiditate est voluptatum dolorem dolorum fugit architecto labore? Quis perferendis id aut repellendus ipsam voluptatibus et, fugit eum quam commodi at doloribus neque tempora atque. Neque repudiandae exercitationem atque quaerat perferendis nobis sed!</td>
-          </tr>
+            <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, nobis quod vitae minima aliquid blanditiis in tempore labore temporibus impedit hic tenetur id rem dolorum animi sunt corporis perspiciatis delectus dolor explicabo omnis earum soluta. Similique voluptas eos, consequuntur ipsa facere nostrum voluptate laudantium veniam, quia quisquam obcaecati quod. In!</td>
+          </tr>          
         </tbody>
       </table>
     </section>
     <!-- /Tabella -->
-
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum sequi amet dolorum! Ea asperiores eius tenetur consequatur similique modi explicabo architecto nostrum quaerat sapiente. Dolores provident quibusdam libero consequuntur quidem ratione ipsum fuga sint a perferendis, neque nesciunt officia dignissimos nam accusantium aperiam id quia natus. <span class="hilighted-text">Quidem laudantium voluptate placeat rerum sit vel expedita, quos deserunt quasi</span>, necessitatibus ad accusamus ea mollitia esse a labore earum. Vitae facere cupiditate explicabo et nostrum deleniti repellat iste temporibus natus. Ratione, laborum provident!</p>
   </section>
   <!-- /Contenuto Articolo -->
 
