--- a/index.html
+++ b/index.html
@@ -18,31 +18,34 @@
     <section class="title-article">
       <h1>Internet deve essere al servizio del "bene publico": il manifesto di Tim Berners-Lee</h1>
       <div class="subhead">
-        <h5>Scritto da <a class="link-main-page" href="">The Booleaner</a></h5>
+        <h3>Scritto da <a class="link-main-page" href="">The Booleaner</a></h3>
         <p>il 10/10/2020</p>
       </div>
-
+      
+      <!-- immagini con didascalia -->
       <div class="photo-tim"> 
         <img src="img/tim-1.jpg" alt="">
         <img src="img/tim-2.jpg" alt="">
         <p> 1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
         2nd Photo: Wikimedia, by Paul Clarke</p>
         </div>
+      <!-- /immagini con didascalia -->
+
     </section>
     <!-- /Titolo -->
 
     <!-- Contenuto Articolo -->
-    <section>
+    <section class="article-content">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem earum, quibusdam blanditiis facere atque optio distinctio aperiam tempore ex laboriosam, <span class="hilighted-text">voluptates eos ullam dolores</span> laudantium tenetur? Porro sed vitae a?</p>
 
     <!-- Bullet Points -->
-    <section>
+    <div class="bullet-points">
       <ul>
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem earum, quibusdam blanditiis facere atque optio distinctio aperiam tempore ex laboriosam, voluptates eos ullam dolores laudantium tenetur? Porro sed vitae a?</li>
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem earum, quibusdam blanditiis facere atque optio distinctio aperiam tempore ex laboriosam, voluptates eos ullam dolores laudantium tenetur? Porro sed vitae a?</li>
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem earum, quibusdam blanditiis facere atque optio distinctio aperiam tempore ex laboriosam, voluptates eos ullam dolores laudantium tenetur? Porro sed vitae a?</li>
       </ul>
-    </section>
+    </div>
     <!-- /Bullet Points -->
 
     <!-- Tabella -->
@@ -59,7 +62,7 @@
           <tr class="odd-row-color">
             <td>Lorem ipsum dolor</td>
             <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, nobis quod vitae minima aliquid blanditiis in tempore labore temporibus impedit hic tenetur id rem dolorum animi sunt corporis perspiciatis delectus dolor explicabo omnis earum soluta. Similique voluptas eos, consequuntur ipsa facere nostrum voluptate laudantium veniam, quia quisquam obcaecati quod. In!</td>
+            <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, nobis quod vitae minima aliquid blanditiis in tempore labore temporibus impedit hic tenetur id rem dolorum animi sunt corporis perspiciatis delectus dolor explicabo omnis earum soluta.</td>
           </tr>
           <tr>
             <td>Lorem ipsum dolor</td>
@@ -80,10 +83,12 @@
   <!-- /Contenuto Articolo -->
 
   <!-- Pagine correlate -->
-  <section>
-    <h5>Potrebbero interessarti</h5>
-    <img src="img/monitor.jpg" alt="monitor computer">
-    <img src="img/graph.jpg" alt="schermo grafico">
+  <section class="correlated-links">
+    <h4>Potrebbero interessarti</h4>
+    <div class="monitor-comp">lorem ipsum dolor</div>
+    <div class="schermo-grafico">lorem ipsum dolor</div>
+    <!-- <img src="img/monitor.jpg" alt="monitor computer">
+    <img src="img/graph.jpg" alt="schermo grafico"> -->
   </section>
   <!-- /Pagine correlate -->
 
